--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     min-height: 100vh;
     max-width: 700px;
     width: 100%;
-    margin: 0 auto;
+    margin: 100px auto 0;
     display: flex;
     flex-direction: column;
 }
